Day3/cronjob.yaml
# Create test11 namespace (Dont need to create namespace, it will create in the pod spec, but goot to be explicit)
apiVersion: v1
kind: Namespace
metadata:
  name: test13
